Skills align correctly with if statements, and icon size is correctly

--- a/src/app/userprofile/userprofile.component.scss
+++ b/src/app/userprofile/userprofile.component.scss
@@ -6,6 +6,9 @@
 		height: 128px;
 	}
 }
+.size-2 {
+	font-size: 2rem;
+}
 
 .profile-background {
 	background-color: #112938;
